# api-fortress

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UNDERSTANDING_RESULTS.md  USAGE.md  demo.py  fortress.bat  fortress.example.yaml  fortress.py  hacker-news-security-report.md  pyproject.toml  requirements.txt  setup.py  test-report.html
.github/workflows/: ci.yml
api_fortress/: __init__.py  api_adapters.py  cli.py  config_loader.py  display.py  http_client.py  models.py  recommendations.py  reporting.py  scanner.py
api_fortress/scanners/: __init__.py  auth_scanner.py  bola_scanner.py  deep_analysis_scanner.py  injection_scanner.py  misconfig_scanner.py  ssrf_scanner.py  universal_error_scanner.py
